dev-ops/exam/kubernetes/v1/exam-service-v1.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: exam
  name: exam
spec:
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 30232
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: exam
  type: LoadBalancer
